...
            )
        },
        navigationIcon = {
            IconButton(onClick = onMenuClick) {
                Icon(
                    imageVector = Icons.Default.Menu,
                    contentDescription = "メニュー"
                )
            }
        },
        actions = {
            IconButton(onClick = onFilterClick) {
                BadgedBox(badge = {
...
